--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 body {
   background: linear-gradient(to bottom right, #8054ff 50%, white 50%);
   margin: 0;
+  padding: 0;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -12,6 +13,7 @@ a {
   text-decoration-line: none;
   color: black;
 }
+
 input {
   outline: none;
   border: 0;
@@ -41,121 +43,8 @@ input {
     width: 100%;
   }
 }
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.container {
-  background-color: black;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  width: 300px;
-  height: 600px;
-  color: white;
-  border-radius: 2rem;
-  padding: 15px 35px 0;
-}
+
 .appForm {
   display: flex;
   flex-direction: column;
-}
-.todoform {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  top: 50px;
-  label[for="todo"] {
-    position: absolute;
-    left: 0;
-    pointer-events: none;
-  }
-
-  input[name="todo"] {
-    position: relative;
-    top: 100px;
-    width: 100%;
-    background-color: transparent;
-    color: white;
-    font-size: 1.25rem;
-    transition: 0.5s;
-  }
-  i {
-    position: absolute;
-    top: 130px;
-    left: 0;
-    -moz-border-left-colors: 0;
-    height: 2px;
-    width: 100%;
-    background: #fff;
-  }
-  i::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(
-      90deg,
-      #2196f3,
-      #8b47ff,
-      #ff1b69,
-      #452de3,
-      #2196f3
-    );
-    animation: animate 4s linear infinite;
-    transition: 0.5s;
-    overflow: hidden;
-  }
-  @keyframes animate {
-    0% {
-      background-position-x: 0;
-    }
-    100% {
-      background-position-x: 250px;
-    }
-  }
-
-  .date {
-    display: flex;
-    position: absolute;
-    top: 200px;
-    left: 0;
-    input {
-      padding-left: 15px;
-      background-color: black;
-      color: white;
-      border: none;
-      outline: none;
-    }
-  }
-  button {
-    position: absolute;
-    margin-right: -35px;
-    border: none;
-    right: 0;
-    bottom: 50px;
-    width: 250px;
-    height: 50px;
-    background-color: #3b39db;
-    color: white;
-    border-radius: 2rem 0 2rem 0;
-  }
-}
-.todoList {
-  position: relative;
-
-  .circle {
-    position: absolute;
-    top: 400px;
-    right: 0;
-    background-color: #424053;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 2rem;
-  }
 }
